--- a/slides/01-foundations.Rmd
+++ b/slides/01-foundations.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Teaching Bayesian Statistics at the Undergraduate Level\n\nBayesian Foundations"
-subtitle: "USCOTS workshop"
-author: "Miles Ott"
-date: "2021-06-24"
+subtitle: "ICOTS workshop"
+author: "Mine Dogucu"
+date: "2022-09-11"
 output:
   xaringan::moon_reader:
     css: slide-style.css
