--- a/slides/01-foundations.Rmd
+++ b/slides/01-foundations.Rmd
@@ -20,7 +20,7 @@ output:
 ---
 
 
-class: top 
+class: middle 
 
 ## Bayesian Foundations Chapters
 
@@ -34,7 +34,7 @@ class: top
 
 ---
 
-class: top 
+class: middle 
 
 ## By the end of this section students will be able to:
 
@@ -46,7 +46,7 @@ class: top
 - Recognize and use common _Conjugate Families_
 ---
 
-class: top 
+class: middle 
 
 ## Thinking Like a Bayesian
 
@@ -57,7 +57,7 @@ style="width:865px;">]
 
 ---
 
-class: top
+class: middle
 
 ## Bechdel Test
 
@@ -66,7 +66,7 @@ style="width:665px; margin-top:20px; border: 3px solid whitesmoke; padding: 10px
 
 ---
 
-class: top
+class: middle
 
 ## Bechdel Test
 
@@ -80,21 +80,21 @@ style="width:565px;">]
 
 ---
 
-class: top
+class: middle
 
 ## Building a Prior Distribution: Bechdel Test
 
 --
 
-- What proportion of movies do you think pass the Bechdel test? (chat your answer)
+- What proportion of movies do you think pass the Bechdel test? 
 
 --
 
-- How sure are you? Choose a range of reasonable values. (chat your answer)
+- How sure are you? Choose a range of reasonable values. 
 
 --
 
-- __Breakout rooms__: <a href = "https://github.com/bayes-rules/uscots-2021/blob/main/R/01-foundations-activity.html">01-foundations.html</a>
+- __Breakout rooms__: <a href = "https://bayes-rules-icots-2022.netlify.app/R/01-foundations-activity.html">01-foundations.html</a>
 - Identify a Beta distribution to formalize your prior using functions from `bayesrules` package
 
 --
